// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the error from the ToolbarStore 1`] = `
<DocumentFragment>
  <button
    data-testid="snackbar-error"
    type="button"
  >
    error
  </button>
  <div
    data-testid="toolbar-root"
  >
    <div
      data-testid="toolbar-controls"
    />
    <div
      data-testid="toolbar-controls"
    >
      <div
        data-testid="toolbar-icons"
      >
        <p>
          Test1
        </p>
        <p>
          Test2
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render the items and icons from the ToolbarStore 1`] = `
<DocumentFragment>
  <div
    data-testid="toolbar-root"
  >
    <div
      data-testid="toolbar-controls"
    >
      <div
        data-testid="toolbar-items"
      >
        <button
          data-testid="toolbar-button"
          type="button"
        />
        <div
          data-testid="toolbar-dropdown"
        />
        <div
          data-testid="toolbar-toggler"
        />
      </div>
    </div>
    <div
      data-testid="toolbar-controls"
    >
      <div
        data-testid="toolbar-icons"
      >
        <p>
          Test1
        </p>
        <p>
          Test2
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render the warning from the ToolbarStore 1`] = `
<DocumentFragment>
  <button
    data-testid="snackbar-warning"
    type="button"
  >
    warning
  </button>
  <div
    data-testid="toolbar-root"
  >
    <div
      data-testid="toolbar-controls"
    />
    <div
      data-testid="toolbar-controls"
    >
      <div
        data-testid="toolbar-icons"
      >
        <p>
          Test1
        </p>
        <p>
          Test2
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Show success message on back button for some time 1`] = `
<DocumentFragment>
  <div
    data-testid="toolbar-root"
  >
    <div
      data-testid="toolbar-controls"
    >
      <button
        data-testid="toolbar-success-button"
        type="button"
      />
    </div>
    <div
      data-testid="toolbar-controls"
    />
  </div>
</DocumentFragment>
`;

exports[`Show success message on navigation button for some time 1`] = `
<DocumentFragment>
  <div
    data-testid="toolbar-root"
  >
    <div
      data-testid="toolbar-controls"
    >
      <button
        data-testid="toolbar-success-button"
        type="button"
      />
      <button
        data-testid="toolbar-button"
        type="button"
      />
    </div>
    <div
      data-testid="toolbar-controls"
    />
  </div>
</DocumentFragment>
`;
